Fix overlapping text and graphics for small phones on info cards

--- a/static/stylesheets/info_style.css
+++ b/static/stylesheets/info_style.css
@@ -11,6 +11,10 @@
   height: 100px;
 }
 
+.info-card > .mdl-card__title > .mdl-card__title-text {
+  max-width: 75%;
+}
+
 .info-card > .dark-logo {
     color: #fff
 }
